# swww-manager

./: Cargo.toml  LICENSE  README.md  config.sample.toml  install.sh  uninstall.sh
src/: client.rs  config.rs  hyprland_event.rs  hyprland_ipc.rs  lib.rs  main.rs  monitor.rs  notify.rs  profile.rs  protocol.rs  server.rs  wallpaper.rs
systemd/: swww-manager.service  swww-manager.socket  swww-monitor.service  swww-timer.service  swww-timer.timer
