[package]
name = "swww-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.50"
dirs = "6.0.0"
glob = "0.3.3"
inotify = "0.11.0"
rand = "0.9.2"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = "1.48.0"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
