[package]
name = "swww-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
glob = "0.3.3"
inotify = "0.11.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
shellexpand = "3.1.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
users = "0.11.0"
tokio-util = { version = "0.7", features = ["codec"] }
clap = { version = "4.5.50", features = ["derive"] }
futures = "0.3"
chrono = "0.4"
